--- a/Source/Blazorise.Material/wwwroot/blazorise.material.css
+++ b/Source/Blazorise.Material/wwwroot/blazorise.material.css
@@ -3033,6 +3033,22 @@ body {
   gap: 0.5rem;
 }
 
+@media (max-width: 767.98px) {
+  .mui-button-group {
+    max-inline-size: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    flex-wrap: nowrap;
+  }
+  .mui-button-group > .mui-button,
+  .mui-button-group > .mui-button-group > .mui-button,
+  .mui-button-group > .mui-dropdown > .mui-button,
+  .mui-button-group > .mui-dropdown > .mui-dropdown-toggle,
+  .mui-button-group > .mui-radio-button > .mui-button {
+    --mui-btn-padding: 0.625rem;
+    --mui-btn-font-size: 0.6875rem;
+  }
+}
 .mui-card {
   --_padding: 1rem;
   --mui-card-color: var(--mui-on-surface);
